home page bg color, footer sizing

--- a/Week-1-Project/contact.html
+++ b/Week-1-Project/contact.html
@@ -24,16 +24,12 @@
     <!-- <div class="container-fluid d-flex flex-column"> -->
     <!-- Header -->
     <header
-      class="font-mich border container-fluid d-flex flex-row justify-content-evenly flex-basis-20 align-items-center"
+      class="font-mich container-fluid d-flex flex-row justify-content-evenly flex-basis-20 align-items-center"
     >
-      <div
-        class="border container-fluid d-flex flex-basis-50 justify-content-evenly"
-      >
+      <div class="container-fluid d-flex flex-basis-50 justify-content-evenly">
         <h1 class="text-wrap text-center align-middle">House of Junk</h1>
       </div>
-      <div
-        class="border container-fluid d-flex flex-basis-50 justify-content-evenly"
-      >
+      <div class="container-fluid d-flex flex-basis-50 justify-content-evenly">
         <img
           src="https://via.placeholder.com/150"
           alt="placeholder header"
@@ -45,7 +41,7 @@
       </div>
     </header>
     <!-- Nav -->
-    <div class="container-fluid d-flex justify-content-evenly border">
+    <div class="container-fluid d-flex justify-content-evenly">
       <nav class="navbar navbar-expand">
         <div class="container">
           <div class="collapse navbar-collapse" id="navbarAltMarkup">
@@ -68,28 +64,28 @@
       </nav>
     </div>
     <!-- Main Body -->
-    <div class="font-quicksand container border" style="height: 100%">
+    <div class="font-quicksand container-fluid" style="height: 100%">
       <!-- Comment container -->
       <div
-        class="border container d-flex flex-column align-items-center flex-comment-form"
+        class="container d-flex flex-column align-items-center flex-comment-form"
       >
         <h2>Contact Us</h2>
-        <div class="border">
+        <div class="">
           <!-- first name -->
           <label for="fname">First Name:</label>
           <input type="text" id="fname" placeholder="John" />
         </div>
-        <div class="border">
+        <div class="">
           <!-- last name -->
           <label for="lname">Last Name:</label>
           <input type="text" id="lname" placeholder="Smith" />
         </div>
-        <div class="border">
+        <div class="">
           <!-- email -->
           <label for="email">Email:</label>
           <input type="email" id="emial" placeholder="yourname@email.com" />
         </div>
-        <div class="border d-flex textbox-size">
+        <div class="d-flex textbox-size">
           <!-- comment box -->
           <textarea
             style="flex-basis: 100%"
@@ -100,7 +96,7 @@
           ></textarea>
         </div>
         <div
-          class="border text-wrap text-center d-flex justify-content-evenly flex-direction-772-column"
+          class="text-wrap text-center d-flex justify-content-evenly flex-direction-772-column"
           style="min-width: 50%"
         >
           <!-- 3 radio select -->
@@ -133,40 +129,33 @@
       </div>
     </div>
     <!-- Footer -->
-    <br />
-    <footer
-      class="font-mich border d-flex flex-row justify-content-evenly align-items-center"
-      style="max-height: 80px"
-    >
-      <div
-        class="border container-fluid d-flex flex-basis-33 justify-content-evenly"
-      >
-        <img
-          src="https://via.placeholder.com/50"
-          alt="placeholder footer 1"
-          id="placeholder footer 1"
-          title="gray box, 50x50 base"
-          style="display: block"
-          class="img-fluid text-wrap text-center align-middle"
-        />
-      </div>
-      <div
-        class="border container-fluid d-flex flex-basis-33 justify-content-evenly"
-      >
-        <h5 class="text-wrap text-center align-middle">©HOUSE OF JUNK 2022</h5>
-      </div>
-      <div
-        class="border container-fluid d-flex flex-basis-33 justify-content-evenly"
-      >
-        <img
-          src="https://via.placeholder.com/50"
-          alt="placeholder footer 2"
-          id="placeholder footer 2"
-          title="gray box, 50x50 base"
-          style="display: block"
-          class="img-fluid text-wrap text-center align-middle"
-        />
-      </div>
+    <footer class="font-mich container-fluid d-flex flex-row justify-content-evenly flex-basis-20 align-items-center" >
+      <!-- <div class=" container-fluid d-flex flex-basis-33 justify-content-evenly"> -->
+        <div class="flex-basis-33">
+          <img
+              src="https://via.placeholder.com/50"
+              alt="placeholder footer 1"
+              id="placeholder footer 1"
+              title="gray box, 50x50 base"
+              style="display: block"
+              class="img-fluid text-wrap text-center align-middle"
+          />
+        </div>  
+        
+        <div class=" container d-flex flex-basis-33 justify-content-evenly">
+          <h5 class="text-wrap text-center align-middle ">©HOUSE OF JUNK 2022</h4>
+        </div>
+        <div class=" container d-flex flex-basis-33 justify-content-evenly">
+          <img
+            src="https://via.placeholder.com/50"
+            alt="placeholder footer 2"
+            id="placeholder footer 2"
+            title="gray box, 50x50 base"
+            style="display: block"
+            class="img-fluid text-wrap text-center align-middle"
+          />
+        </div>
+      
     </footer>
   </body>
 </html>
