--- a/Week-1-Project/for-sale.html
+++ b/Week-1-Project/for-sale.html
@@ -24,17 +24,13 @@
     <!-- <div class="container-fluid d-flex flex-column"> -->
     <!-- Header -->
     <header
-      class="font-mich border container-fluid d-flex flex-row justify-content-evenly flex-basis-20 align-items-center"
+      class="font-mich container-fluid d-flex flex-row justify-content-evenly flex-basis-20 align-items-center"
       id="header"
     >
-      <div
-        class="border container-fluid d-flex flex-basis-50 justify-content-evenly"
-      >
+      <div class="container-fluid d-flex flex-basis-50 justify-content-evenly">
         <h1 class="text-wrap text-center align-middle">House of Junk</h1>
       </div>
-      <div
-        class="border container-fluid d-flex flex-basis-50 justify-content-evenly"
-      >
+      <div class="container-fluid d-flex flex-basis-50 justify-content-evenly">
         <img
           src="https://via.placeholder.com/150"
           alt="placeholder header"
@@ -46,7 +42,7 @@
       </div>
     </header>
     <!-- Nav -->
-    <div class="container-fluid d-flex justify-content-evenly border">
+    <div class="container-fluid d-flex justify-content-evenly">
       <nav class="navbar navbar-expand">
         <div class="container">
           <div class="collapse navbar-collapse" id="navbarAltMarkup">
@@ -69,11 +65,11 @@
       </nav>
     </div>
     <!-- Body -->
-    <div class="border container-fluid d-flex flex-direction-772-column">
+    <div class="container-fluid d-flex flex-direction-772-column">
       <!-- Menu -->
       <div
         id="menu"
-        class="font-abel border d-flex flex-column text-center"
+        class="font-abel d-flex flex-column text-center margin-right-5px"
         style="min-width: 150px"
       >
         <a href="#item0">Item 0</a>
@@ -89,7 +85,7 @@
       </div>
       <!-- Item List -->
       <div
-        class="font-qucksand border d-flex flex-row flex-wrap flex-direction-772-column"
+        class="font-qucksand d-flex flex-row flex-wrap flex-direction-772-column"
       >
         <div id="item0" class="d-flex flex-basis-50 flex-direction-772-column">
           <img
@@ -284,40 +280,34 @@
       </div>
     </div>
     <!-- Footer -->
-    <br />
-    <footer
-      class="font-mich border d-flex flex-row justify-content-evenly align-items-center"
-      style="max-height: 80px"
-    >
-      <div
-        class="border container-fluid d-flex flex-basis-33 justify-content-evenly"
-      >
-        <img
-          src="https://via.placeholder.com/50"
-          alt="placeholder footer 1"
-          id="placeholder footer 1"
-          title="gray box, 50x50 base"
-          style="display: block"
-          class="img-fluid text-wrap text-center align-middle"
-        />
-      </div>
-      <div
-        class="border container-fluid d-flex flex-basis-33 justify-content-evenly"
-      >
-        <h5 class="text-wrap text-center align-middle">©HOUSE OF JUNK 2022</h5>
-      </div>
-      <div
-        class="border container-fluid d-flex flex-basis-33 justify-content-evenly"
-      >
-        <img
-          src="https://via.placeholder.com/50"
-          alt="placeholder footer 2"
-          id="placeholder footer 2"
-          title="gray box, 50x50 base"
-          style="display: block"
-          class="img-fluid text-wrap text-center align-middle"
-        />
-      </div>
+
+    <footer class="font-mich container-fluid d-flex flex-row justify-content-evenly flex-basis-20 align-items-center" style="margin-top: 5px;" >
+      <!-- <div class=" container-fluid d-flex flex-basis-33 justify-content-evenly"> -->
+        <div class="flex-basis-33">
+          <img
+              src="https://via.placeholder.com/50"
+              alt="placeholder footer 1"
+              id="placeholder footer 1"
+              title="gray box, 50x50 base"
+              style="display: block"
+              class="img-fluid text-wrap text-center align-middle"
+          />
+        </div>  
+        
+        <div class=" container d-flex flex-basis-33 justify-content-evenly">
+          <h5 class="text-wrap text-center align-middle" >©HOUSE OF JUNK 2022</h4>
+        </div>
+        <div class=" container d-flex flex-basis-33 justify-content-evenly">
+          <img
+            src="https://via.placeholder.com/50"
+            alt="placeholder footer 2"
+            id="placeholder footer 2"
+            title="gray box, 50x50 base"
+            style="display: block"
+            class="img-fluid text-wrap text-center align-middle"
+          />
+        </div>
+      
     </footer>
   </body>
 </html>
