box sizing, back to top link align

--- a/Week-1-Project/for-sale.html
+++ b/Week-1-Project/for-sale.html
@@ -87,7 +87,7 @@
       <div
         class="font-qucksand d-flex flex-row flex-wrap flex-direction-772-column"
       >
-        <div id="item0" class="d-flex flex-basis-50 flex-direction-772-column">
+        <div id="item0" class="d-flex flex-basis-50 flex-direction-772-column justify-content-between">
           <img
             src="https://via.placeholder.com/50"
             alt="placeholder img0"
@@ -103,10 +103,10 @@
             impedit?
           </p>
           <div class="link-menu-772 text-center align-itmes-end">
-            <a href="#header">back to top</a>
+            <a href="#header" style="min-height: 148px;" >back to top</a>
           </div>
         </div>
-        <div id="item1" class="d-flex flex-basis-50 flex-direction-772-column">
+        <div id="item1" class="d-flex flex-basis-50 flex-direction-772-column justify-content-between">
           <img
             src="https://via.placeholder.com/50"
             alt="placeholder img1"
@@ -122,10 +122,10 @@
             corporis dolore reprehenderit eos?
           </p>
           <div class="link-menu-772 text-center align-items-end">
-            <a href="#header">back to top</a>
+            <a href="#header" style="min-height: 148px;" >back to top</a>
           </div>
         </div>
-        <div id="item2" class="d-flex flex-basis-50 flex-direction-772-column">
+        <div id="item2" class="d-flex flex-basis-50 flex-direction-772-column justify-content-between">
           <img
             src="https://via.placeholder.com/50"
             alt="placeholder img2"
@@ -141,10 +141,10 @@
             deleniti ut, ratione consequatur molestias?
           </p>
           <div class="link-menu-772 text-center align-items-end">
-            <a href="#header">back to top</a>
+            <a href="#header" style="min-height: 148px;">back to top</a>
           </div>
         </div>
-        <div id="item3" class="d-flex flex-basis-50 flex-direction-772-column">
+        <div id="item3" class="d-flex flex-basis-50 flex-direction-772-column justify-content-between">
           <img
             src="https://via.placeholder.com/50"
             alt="placeholder img3"
@@ -159,11 +159,11 @@
             incidunt libero quisquam omnis, dolor, illo similique excepturi
             magnam autem!
           </p>
-          <div class="link-menu-772 text-center margin-bottom">
-            <a href="#header">back to top</a>
+          <div class="link-menu-772 text-center">
+              <a href="#header" class="align-text-bottom " >back to top</a>
           </div>
         </div>
-        <div id="item4" class="d-flex flex-basis-50 flex-direction-772-column">
+        <div id="item4" class="d-flex flex-basis-50 flex-direction-772-column justify-content-between">
           <img
             src="https://via.placeholder.com/50"
             alt="placeholder img4"
@@ -179,10 +179,10 @@
             ex?
           </p>
           <div class="link-menu-772 text-center align-items-end">
-            <a href="#header">back to top</a>
+            <a href="#header" style="min-height: 148px;" >back to top</a>
           </div>
         </div>
-        <div id="item5" class="d-flex flex-basis-50 flex-direction-772-column">
+        <div id="item5" class="d-flex flex-basis-50 flex-direction-772-column justify-content-between">
           <img
             src="https://via.placeholder.com/50"
             alt="placeholder img5"
@@ -198,10 +198,10 @@
             qui laudantium sapiente?
           </p>
           <div class="link-menu-772 text-center align-items-end">
-            <a href="#header">back to top</a>
+            <a href="#header" style="min-height: 148px;" >back to top</a>
           </div>
         </div>
-        <div id="item6" class="d-flex flex-basis-50 flex-direction-772-column">
+        <div id="item6" class="d-flex flex-basis-50 flex-direction-772-column justify-content-between">
           <img
             src="https://via.placeholder.com/50"
             alt="placeholder img6"
@@ -217,10 +217,10 @@
             iste vitae.
           </p>
           <div class="link-menu-772 text-center align-items-end">
-            <a href="#header">back to top</a>
+            <a href="#header" style="min-height: 148px;" >back to top</a>
           </div>
         </div>
-        <div id="item7" class="d-flex flex-basis-50 flex-direction-772-column">
+        <div id="item7" class="d-flex flex-basis-50 flex-direction-772-column justify-content-between">
           <img
             src="https://via.placeholder.com/50"
             alt="placeholder img7"
@@ -236,10 +236,10 @@
             atque. Mollitia itaque assumenda ab.
           </p>
           <div class="link-menu-772 text-center align-items-end">
-            <a href="#header">back to top</a>
+            <a href="#header" style="min-height: 148px;" >back to top</a>
           </div>
         </div>
-        <div id="item8" class="d-flex flex-basis-50 flex-direction-772-column">
+        <div id="item8" class="d-flex flex-basis-50 flex-direction-772-column justify-content-between">
           <img
             src="https://via.placeholder.com/50"
             alt="placeholder img8"
@@ -255,10 +255,10 @@
             aspernatur amet ratione esse officia.
           </p>
           <div class="link-menu-772 text-center align-items-end">
-            <a href="#header">back to top</a>
+            <a href="#header" style="min-height: 148px;" >back to top</a>
           </div>
         </div>
-        <div id="item9" class="d-flex flex-basis-50 flex-direction-772-column">
+        <div id="item9" class="d-flex flex-basis-50 flex-direction-772-column justify-content-between">
           <img
             src="https://via.placeholder.com/50"
             alt="placeholder img9"
@@ -274,14 +274,14 @@
             pariatur nobis in.
           </p>
           <div class="link-menu-772 text-center align-items-end">
-            <a href="#header">back to top</a>
+            <a href="#header" style="min-height: 148px;" >back to top</a>
           </div>
         </div>
       </div>
     </div>
     <!-- Footer -->
 
-    <footer class="font-mich container-fluid d-flex flex-row justify-content-evenly flex-basis-20 align-items-center" style="margin-top: 5px;" >
+    <footer class="font-mich container-fluid d-flex flex-row justify-content-evenly flex-basis-20 align-items-center" >
       <!-- <div class=" container-fluid d-flex flex-basis-33 justify-content-evenly"> -->
         <div class="flex-basis-33">
           <img
