--- a/Week-1-Project/contact.html
+++ b/Week-1-Project/contact.html
@@ -129,7 +129,7 @@
       </div>
     </div>
     <!-- Footer -->
-    <footer class="font-mich container-fluid d-flex flex-row justify-content-evenly flex-basis-20 align-items-center" >
+    <footer class="font-mich container-fluid d-flex flex-row justify-content-evenly flex-basis-20 align-items-center footer-padding" >
       <!-- <div class=" container-fluid d-flex flex-basis-33 justify-content-evenly"> -->
         <div class="flex-basis-33">
           <img
@@ -141,7 +141,6 @@
               class="img-fluid text-wrap text-center align-middle"
           />
         </div>  
-        
         <div class=" container d-flex flex-basis-33 justify-content-evenly">
           <h5 class="text-wrap text-center align-middle ">©HOUSE OF JUNK 2022</h4>
         </div>
@@ -155,7 +154,6 @@
             class="img-fluid text-wrap text-center align-middle"
           />
         </div>
-      
     </footer>
   </body>
 </html>
