--- a/Week-1-Project/for-sale.html
+++ b/Week-1-Project/for-sale.html
@@ -281,7 +281,7 @@
     </div>
     <!-- Footer -->
 
-    <footer class="font-mich container-fluid d-flex flex-row justify-content-evenly flex-basis-20 align-items-center" >
+    <footer class="font-mich container-fluid d-flex flex-row justify-content-evenly flex-basis-20 align-items-center footer-padding" >
       <!-- <div class=" container-fluid d-flex flex-basis-33 justify-content-evenly"> -->
         <div class="flex-basis-33">
           <img
