item padding for sale and contact

--- a/Week-1-Project/contact.html
+++ b/Week-1-Project/contact.html
@@ -26,7 +26,7 @@
     <header
       class="font-mich container-fluid d-flex flex-row justify-content-evenly flex-basis-20 align-items-center"
     >
-      <div class="container-fluid d-flex flex-basis-50 justify-content-evenly">
+      <div class="container-fluid d-flex flex-basis-50 justify-content-evenly padding-bottom-10px">
         <h1 class="text-wrap text-center align-middle">House of Junk</h1>
       </div>
       <div class="container-fluid d-flex flex-basis-50 justify-content-evenly">
@@ -46,7 +46,7 @@
         <div class="container">
           <div class="collapse navbar-collapse" id="navbarAltMarkup">
             <div class="navbar-nav">
-              <a class="nav-link text-wrap text-center" href="./index.html"
+              <a class="nav-link text-wrap text-center " href="./index.html"
                 >Home</a
               >
               <a class="nav-link text-wrap text-center" href="./for-sale.html"
@@ -70,22 +70,22 @@
         class="container d-flex flex-column align-items-center flex-comment-form"
       >
         <h2>Contact Us</h2>
-        <div class="">
+        <div class=" padding-bottom-10px">
           <!-- first name -->
           <label for="fname">First Name:</label>
           <input type="text" id="fname" placeholder="John" />
         </div>
-        <div class="">
+        <div class=" padding-bottom-10px">
           <!-- last name -->
           <label for="lname">Last Name:</label>
           <input type="text" id="lname" placeholder="Smith" />
         </div>
-        <div class="">
+        <div class="padding-bottom-10px">
           <!-- email -->
           <label for="email">Email:</label>
           <input type="email" id="emial" placeholder="yourname@email.com" />
         </div>
-        <div class="d-flex textbox-size">
+        <div class="d-flex textbox-size padding-bottom-10px">
           <!-- comment box -->
           <textarea
             style="flex-basis: 100%"
@@ -96,7 +96,7 @@
           ></textarea>
         </div>
         <div
-          class="text-wrap text-center d-flex justify-content-evenly flex-direction-772-column"
+          class="text-wrap text-center d-flex justify-content-evenly flex-direction-772-column padding-bottom-10px"
           style="min-width: 50%"
         >
           <!-- 3 radio select -->
