--- a/Week-1-Project/for-sale.html
+++ b/Week-1-Project/for-sale.html
@@ -69,7 +69,7 @@
       <!-- Menu -->
       <div
         id="menu"
-        class="font-abel d-flex flex-column text-center margin-right-5px"
+        class="font-abel d-flex flex-column text-center padding-right-15px padding-bottom-15px"
         style="min-width: 150px"
       >
         <a href="#item0">Item 0</a>
