--- a/Week-1-Project/for-sale.html
+++ b/Week-1-Project/for-sale.html
@@ -69,25 +69,25 @@
       <!-- Menu -->
       <div
         id="menu"
-        class="font-abel d-flex flex-column text-center padding-right-15px padding-bottom-15px"
+        class="font-abel d-flex flex-column text-center padding-right-15px padding-bottom-15px b"
         style="min-width: 150px"
       >
-        <a href="#item0">Item 0</a>
-        <a href="#item1">Item 1</a>
-        <a href="#item2">Item 2</a>
-        <a href="#item3">Item 3</a>
-        <a href="#item4">Item 4</a>
-        <a href="#item5">Item 5</a>
-        <a href="#item6">Item 6</a>
-        <a href="#item7">Item 7</a>
-        <a href="#item8">Item 8</a>
-        <a href="#item9">Item 9</a>
+        <a class="nav-link text-color-onyx" href="#item0">Item 0</a>
+        <a class="nav-link text-color-onyx" href="#item1">Item 1</a>
+        <a class="nav-link text-color-onyx" href="#item2">Item 2</a>
+        <a class="nav-link text-color-onyx" href="#item3">Item 3</a>
+        <a class="nav-link text-color-onyx" href="#item4">Item 4</a>
+        <a class="nav-link text-color-onyx" href="#item5">Item 5</a>
+        <a class="nav-link text-color-onyx" href="#item6">Item 6</a>
+        <a class="nav-link text-color-onyx" href="#item7">Item 7</a>
+        <a class="nav-link text-color-onyx" href="#item8">Item 8</a>
+        <a class="nav-link text-color-onyx" href="#item9">Item 9</a>
       </div>
       <!-- Item List -->
       <div
         class="font-qucksand d-flex flex-row flex-wrap flex-direction-772-column"
       >
-        <div id="item0" class="d-flex flex-basis-50 flex-direction-772-column justify-content-between">
+        <div id="item0" class="d-flex flex-basis-50 flex-direction-772-column justify-content-between text-center">
           <img
             src="https://via.placeholder.com/50"
             alt="placeholder img0"
@@ -103,10 +103,10 @@
             impedit?
           </p>
           <div class="link-menu-772 text-center align-itmes-end">
-            <a href="#header" style="min-height: 148px;" >back to top</a>
+            <a href="#header" style="min-height: 148px;" class="nav-current-page-color text-center" >back to top</a>
           </div>
         </div>
-        <div id="item1" class="d-flex flex-basis-50 flex-direction-772-column justify-content-between">
+        <div id="item1" class="d-flex flex-basis-50 flex-direction-772-column justify-content-between text-center"">
           <img
             src="https://via.placeholder.com/50"
             alt="placeholder img1"
@@ -122,10 +122,10 @@
             corporis dolore reprehenderit eos?
           </p>
           <div class="link-menu-772 text-center align-items-end">
-            <a href="#header" style="min-height: 148px;" >back to top</a>
+            <a href="#header" style="min-height: 148px;" class="nav-current-page-color" >back to top</a>
           </div>
         </div>
-        <div id="item2" class="d-flex flex-basis-50 flex-direction-772-column justify-content-between">
+        <div id="item2" class="d-flex flex-basis-50 flex-direction-772-column justify-content-between text-center"">
           <img
             src="https://via.placeholder.com/50"
             alt="placeholder img2"
@@ -141,10 +141,10 @@
             deleniti ut, ratione consequatur molestias?
           </p>
           <div class="link-menu-772 text-center align-items-end">
-            <a href="#header" style="min-height: 148px;">back to top</a>
+            <a href="#header" style="min-height: 148px;" class="nav-current-page-color">back to top</a>
           </div>
         </div>
-        <div id="item3" class="d-flex flex-basis-50 flex-direction-772-column justify-content-between">
+        <div id="item3" class="d-flex flex-basis-50 flex-direction-772-column justify-content-between text-center"">
           <img
             src="https://via.placeholder.com/50"
             alt="placeholder img3"
@@ -160,10 +160,10 @@
             magnam autem!
           </p>
           <div class="link-menu-772 text-center">
-              <a href="#header" class="align-text-bottom " >back to top</a>
+              <a href="#header" class="align-text-bottom nav-current-page-color" >back to top</a>
           </div>
         </div>
-        <div id="item4" class="d-flex flex-basis-50 flex-direction-772-column justify-content-between">
+        <div id="item4" class="d-flex flex-basis-50 flex-direction-772-column justify-content-between text-center"">
           <img
             src="https://via.placeholder.com/50"
             alt="placeholder img4"
@@ -179,10 +179,10 @@
             ex?
           </p>
           <div class="link-menu-772 text-center align-items-end">
-            <a href="#header" style="min-height: 148px;" >back to top</a>
+            <a href="#header" style="min-height: 148px;" class="nav-current-page-color" >back to top</a>
           </div>
         </div>
-        <div id="item5" class="d-flex flex-basis-50 flex-direction-772-column justify-content-between">
+        <div id="item5" class="d-flex flex-basis-50 flex-direction-772-column justify-content-between text-center"">
           <img
             src="https://via.placeholder.com/50"
             alt="placeholder img5"
@@ -198,10 +198,10 @@
             qui laudantium sapiente?
           </p>
           <div class="link-menu-772 text-center align-items-end">
-            <a href="#header" style="min-height: 148px;" >back to top</a>
+            <a href="#header" style="min-height: 148px;" class="nav-current-page-color" >back to top</a>
           </div>
         </div>
-        <div id="item6" class="d-flex flex-basis-50 flex-direction-772-column justify-content-between">
+        <div id="item6" class="d-flex flex-basis-50 flex-direction-772-column justify-content-between text-center"">
           <img
             src="https://via.placeholder.com/50"
             alt="placeholder img6"
@@ -217,10 +217,10 @@
             iste vitae.
           </p>
           <div class="link-menu-772 text-center align-items-end">
-            <a href="#header" style="min-height: 148px;" >back to top</a>
+            <a href="#header" style="min-height: 148px;" class="nav-current-page-color" >back to top</a>
           </div>
         </div>
-        <div id="item7" class="d-flex flex-basis-50 flex-direction-772-column justify-content-between">
+        <div id="item7" class="d-flex flex-basis-50 flex-direction-772-column justify-content-between text-center"">
           <img
             src="https://via.placeholder.com/50"
             alt="placeholder img7"
@@ -236,10 +236,10 @@
             atque. Mollitia itaque assumenda ab.
           </p>
           <div class="link-menu-772 text-center align-items-end">
-            <a href="#header" style="min-height: 148px;" >back to top</a>
+            <a href="#header" style="min-height: 148px;" class="nav-current-page-color" >back to top</a>
           </div>
         </div>
-        <div id="item8" class="d-flex flex-basis-50 flex-direction-772-column justify-content-between">
+        <div id="item8" class="d-flex flex-basis-50 flex-direction-772-column justify-content-between text-center"">
           <img
             src="https://via.placeholder.com/50"
             alt="placeholder img8"
@@ -255,10 +255,10 @@
             aspernatur amet ratione esse officia.
           </p>
           <div class="link-menu-772 text-center align-items-end">
-            <a href="#header" style="min-height: 148px;" >back to top</a>
+            <a href="#header" style="min-height: 148px;" class="nav-current-page-color" >back to top</a>
           </div>
         </div>
-        <div id="item9" class="d-flex flex-basis-50 flex-direction-772-column justify-content-between">
+        <div id="item9" class="d-flex flex-basis-50 flex-direction-772-column justify-content-between text-center"">
           <img
             src="https://via.placeholder.com/50"
             alt="placeholder img9"
@@ -274,7 +274,7 @@
             pariatur nobis in.
           </p>
           <div class="link-menu-772 text-center align-items-end">
-            <a href="#header" style="min-height: 148px;" >back to top</a>
+            <a href="#header" style="min-height: 148px;" class="nav-current-page-color" >back to top</a>
           </div>
         </div>
       </div>
