--- a/Week-1-Project/index.html
+++ b/Week-1-Project/index.html
@@ -64,7 +64,7 @@
         <!-- Body -->
         <div class=" container-fluid d-flex flex-direction-772-column">
           <!-- Main -->
-          <div class=" font-quicksand  container d-flex flex-row flex-wrap flex-basis-66 justify-content-evenly text-center">
+          <div class=" text-color-gainsboro font-quicksand  container d-flex flex-row flex-wrap flex-basis-66 justify-content-evenly text-center">
             <div style="margin: 1px; min-width: 113px;" class="bg-steelteal flex-basis-20">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum praesentium at veniam iste, culpa nam molestias ullam obcaecati architecto mollitia itaque quod voluptas maxime nemo velit quo. Laboriosam, molestiae eius.</div>
             <div style="margin: 1px; min-width: 113px;" class="bg-steelteal flex-basis-20">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deleniti reiciendis hic qui exercitationem. Temporibus, laudantium aperiam? Ut nesciunt consequuntur quisquam blanditiis obcaecati pariatur ab omnis. Exercitationem tempore sit veniam nesciunt!</div>
             <div style="margin: 1px; min-width: 113px;" class="bg-steelteal flex-basis-20">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis nostrum reprehenderit temporibus id delectus, architecto nobis laboriosam quae totam repellat officiis necessitatibus, culpa placeat labore itaque reiciendis animi cumque deserunt?</div>
@@ -77,7 +77,7 @@
             <div style="margin: 1px; min-width: 113px;" class="bg-steelteal flex-basis-20">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore iusto, fugiat aut obcaecati laboriosam quaerat odio perspiciatis, iure reprehenderit, nulla vel quo labore tenetur soluta cupiditate officia! Eaque, quasi tempora.</div>
           </div>
           <!-- Side -->
-          <div class=" font-abel  container d-flex flex-column flex-basis-33 justify-content-evenly text-center" >
+          <div class=" font-abel text-color-gainsboro container d-flex flex-column flex-basis-33 justify-content-evenly text-center" >
             <div style="margin: 1px;" class="bg-darkslategray flex-basis-20">side content word word </div>
             <div style="margin: 1px;" class="bg-darkslategray flex-basis-20">side content word word word </div>
             <div style="margin: 1px;" class="bg-darkslategray flex-basis-20">side content word word word word </div>
