--- a/Week-2/day5-classwork/whackamole.html
+++ b/Week-2/day5-classwork/whackamole.html
@@ -7,19 +7,52 @@
     <title>Document</title>
     <style>
       div {
-        height: 150px;
-        width: 100%;
+        height: 100px;
+        flex-basis: 19%;
         border: 1px solid black;
+      }
+      .flex-container {
+        width: 100%;
+        flex: auto;
+        flex-flow: wrap;
+        display: flex;
+      }
+      .green {
+        background-color: green;
       }
     </style>
   </head>
   <body>
-    <!-- Create a simple website with 4 divs with no styling. -->
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-
+    <main>
+      <span id="count">0</span>
+    </main>
+    <main class="flex-container">
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+    </main>
     <script src="./whackamole.js"></script>
   </body>
 </html>
