--- a/Week-2/day5-classwork/whackamole.html
+++ b/Week-2/day5-classwork/whackamole.html
@@ -33,6 +33,7 @@
     <main class="flex-container">
       <span id="count">0</span>
       <button class="but-start" id="start">Begin!</button>
+      <span id="clock"></span>
     </main>
     <main class="flex-container">
       <div></div>
