--- a/Week-2/day5-classwork/whackamole.html
+++ b/Week-2/day5-classwork/whackamole.html
@@ -33,6 +33,9 @@
     <body>
         <main class="flex-container">
             <span id="count">Score: 0</span>
+            <input type="radio" value="easy" name="difRad" />
+            <input type="radio" value="medium" name="difRad" />
+            <input type="radio" value="hard" name="difRad" />
             <button class="but-start" id="start">Begin!</button>
             <span id="clock"></span>
         </main>
