--- a/Week-2/day5-classwork/whackamole.html
+++ b/Week-2/day5-classwork/whackamole.html
@@ -33,9 +33,27 @@
     <body>
         <main class="flex-container">
             <span id="count">Score: 0</span>
-            <input type="radio" value="easy" name="difRad" />
-            <input type="radio" value="medium" name="difRad" />
-            <input type="radio" value="hard" name="difRad" />
+            <input
+                class="radio"
+                id="easy"
+                type="radio"
+                value="easy"
+                name="difRad"
+            />
+            <input
+                class="radio"
+                id="medium"
+                type="radio"
+                value="medium"
+                name="difRad"
+            />
+            <input
+                class="radio"
+                id="hard"
+                type="radio"
+                value="hard"
+                name="difRad"
+            />
             <button class="but-start" id="start">Begin!</button>
             <span id="clock"></span>
         </main>
